--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         <script src = "javascript.js" defer></script>
     </head>
     <body>
+        <div class = 'test'><h1>test</h1></div>
+        <div class = 'calculator'>
+            <div class = 'screen'></div>
+            <div class = 'buttons'>
+                <div class = 'numpad'>
 
+                </div>
+                <div class = 'functions'>
+
+                </div>
+            </div>
+        </div>
     </body>
 </html>
