Have aesthetics of calculator in place. Will more than likely reformat and change the layout/design as it looks very blocky at the moment. Not a bad start though.

--- a/index.html
+++ b/index.html
@@ -7,15 +7,36 @@
         <script src = "javascript.js" defer></script>
     </head>
     <body>
-        <div class = 'test'><h1>test</h1></div>
-        <div class = 'calculator'>
-            <div class = 'screen'></div>
-            <div class = 'buttons'>
-                <div class = 'numpad'>
-
+        <div class="container">
+            <div class = 'calculator'>
+                <div class = 'screen'>
+                    <p> </p>
                 </div>
-                <div class = 'functions'>
-
+                <div class = 'buttons'>
+                    <div class = 'numpad'>
+                        <button class="button" id= "seven">7</button>
+                        <button class="button" id= "eight">8</button>
+                        <button class="button" id= "nine">9</button>
+                        <button class="button" id= "four">4</button>
+                        <button class="button" id= "five">5</button>
+                        <button class="button" id= "six">6</button>
+                        <button class="button" id= "one">1</button>
+                        <button class="button" id= "two">2</button>
+                        <button class="button" id= "three">3</button>
+                        <button class="button" id= "negative">(-)</button>
+                        <button class="button" id= "zero">0</button>
+                        <button class="button" id= "decimal">.</button>
+                    </div>
+                    <div class = 'functions'>
+                        <button class="button" id= "clear">C</button>
+                        <button class="button" id= "clearall">AC</button>
+                        <button class="button" id= "add">+</button>
+                        <button class="button" id= "subtract">-</button>
+                        <button class="button" id= "multiply">*</button>
+                        <button class="button" id= "divide">/</button>
+                        <button class="button" id= "equal">=</button>
+                        <button class="button" id= "squared">^2</button>
+                    </div>
                 </div>
             </div>
         </div>
