--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
     <body>
         <div class="container">
             <div class = 'calculator'>
-                <div class = 'screen'>
+                <div class = 'display' id="display">
                     <p> </p>
                 </div>
                 <div class = 'buttons'>
                     <div class = 'numpad'>
-                        <button class="button" id= "seven">7</button>
-                        <button class="button" id= "eight">8</button>
-                        <button class="button" id= "nine">9</button>
-                        <button class="button" id= "four">4</button>
-                        <button class="button" id= "five">5</button>
-                        <button class="button" id= "six">6</button>
-                        <button class="button" id= "one">1</button>
-                        <button class="button" id= "two">2</button>
-                        <button class="button" id= "three">3</button>
-                        <button class="button" id= "negative">(-)</button>
-                        <button class="button" id= "zero">0</button>
-                        <button class="button" id= "decimal">.</button>
+                        <button type= "button" class="number" id= "seven">7</button>
+                        <button type= "button" class="number" id= "eight">8</button>
+                        <button type= "button" class="number" id= "nine">9</button>
+                        <button type= "button" class="number" id= "four">4</button>
+                        <button type= "button" class="number" id= "five">5</button>
+                        <button type= "button" class="number" id= "six">6</button>
+                        <button type= "button" class="number" id= "one">1</button>
+                        <button type= "button" class="number" id= "two">2</button>
+                        <button type= "button" class="number" id= "three">3</button>
+                        <button type= "button" class="number" id= "negative">(-)</button>
+                        <button type= "button" class="number" id= "zero">0</button>
+                        <button type= "button" class="number" id= "decimal">.</button>
                     </div>
                     <div class = 'functions'>
-                        <button class="button" id= "clear">C</button>
-                        <button class="button" id= "clearall">AC</button>
-                        <button class="button" id= "add">+</button>
-                        <button class="button" id= "subtract">-</button>
-                        <button class="button" id= "multiply">*</button>
-                        <button class="button" id= "divide">/</button>
-                        <button class="button" id= "equal">=</button>
-                        <button class="button" id= "squared">^2</button>
+                        <button type= "button" class="operator" id= "delete">DEL</button>
+                        <button type= "button" class="operator" id= "clearall">AC</button>
+                        <button type= "button" class="operator" id= "add">+</button>
+                        <button type= "button" class="operator" id= "subtract">-</button>
+                        <button type= "button" class="operator" id= "multiply">*</button>
+                        <button type= "button" class="operator id= "divide">/</button>
+                        <button type= "button" class="operator" id= "equal">=</button>
+                        <button type= "button" class="operator" id= "exponent">^x</button>
                     </div>
                 </div>
             </div>
