--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <div class="container">
             <div class = 'calculator'>
                 <div class = 'display' id="display">
-                    <p> </p>
+                    <p class = 'operationDisplay' id = 'equation'>  this </p>
+                    <p class = 'resultantDisplay' id = 'resultant'> that </p>
                 </div>
                 <div class = 'buttons'>
                     <div class = 'numpad'>
@@ -33,7 +34,7 @@
                         <button type= "button" class="operator" id= "add">+</button>
                         <button type= "button" class="operator" id= "subtract">-</button>
                         <button type= "button" class="operator" id= "multiply">*</button>
-                        <button type= "button" class="operator id= "divide">/</button>
+                        <button type= "button" class="operator" id= "divide">/</button>
                         <button type= "button" class="operator" id= "equal">=</button>
                         <button type= "button" class="operator" id= "exponent">^x</button>
                     </div>
