Make input's work correctly Need to implement delete button and clear button next!

--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
             <div class = 'calculator'>
                 <div class = 'display' id="display">
                     <div class = 'operationDisplay' id = 'equation'>
-                        <p class = 'equationVar' id = 'firstVar'>
-                        
-                        </p>
-                        <p class = 'equationVar' id = 'operatorSign'>
-                        </p>
-                        <p class = 'equationVar' id = 'secondVar'>
-                    
-                        </p>
+                        <p class = 'equationVar' id = 'firstVar'></p>
+                        <p class = 'equationVar' id = 'operatorSign'></p>
+                        <p class = 'equationVar' id = 'secondVar'></p>
                     </div>
                     <p class = 'resultantDisplay' id = 'resultant'> that </p>
                 </div>
