--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <p class = 'equationVar' id = 'operatorSign'></p>
                         <p class = 'equationVar' id = 'secondVar'></p>
                     </div>
-                    <p class = 'resultantDisplay' id = 'resultant'> that </p>
+                    <p class = 'resultantDisplay' id = 'resultant'></p>
                 </div>
                 <div class = 'buttons'>
                     <div class = 'numpad'>
@@ -39,7 +39,7 @@
                         <button type= "button" class="operator" id= "subtract">-</button>
                         <button type= "button" class="operator" id= "multiply">*</button>
                         <button type= "button" class="operator" id= "divide">/</button>
-                        <button type= "button" class="auxiliary" id= "equal">=</button>
+                        <button type= "button" class="equal" id= "equal">=</button>
                         <button type= "button" class="operator" id= "exponent">^x</button>
                     </div>
                 </div>
