Fix the answer display screen. Next up are a few minor fixes, including: Implement negative numbers Implement the exponent button Implement the delete button Implement using answer as an operand Make sure the decimal button is working correctly

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                         <p class = 'equationVar' id = 'operatorSign'></p>
                         <p class = 'equationVar' id = 'secondVar'></p>
                     </div>
-                    <p class = 'resultantDisplay' id = 'resultant'></p>
+                    <div class = 'resultantDisplay' id = 'resultant'>
+                        <p class = 'answerDisplay' id = 'answer'></p>
+                    </div>
                 </div>
                 <div class = 'buttons'>
                     <div class = 'numpad'>
