--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <button type= "button" class="operator" id= "multiply">*</button>
                         <button type= "button" class="operator" id= "divide">/</button>
                         <button type= "button" class="equal" id= "equal">=</button>
-                        <button type= "button" class="operator" id= "exponent">^x</button>
+                        <button type= "button" class="operator" id= "exponent">^</button>
                     </div>
                 </div>
             </div>
